...
            onChangeText={onQueryChange}
            spellCheck={false}
            autoCorrect={false}
            autoCapitalize="none"
            rightControls={
              <TextInput.InnerButton
                label={query !== '' ? 'Clear' : 'Close'}
                onPress={query !== '' ? onPressClear : onPressClose}
              />
            }
          />
        </View>
      </YStack>
...
