...
                  },
                  {
                    label: 'Group',
                    value: 'group',
                  },
                  {
                    label: 'Post',
                    value: 'post',
                  },
                ]}
              />
            </YStack>
          </Sheet.ScrollView>
...
        justifyContent="space-between"
        borderTopColor="$border"
        borderWidth={1}
        paddingHorizontal="$l"
        paddingTop="$s"
        paddingBottom={insets.bottom + 16}>
        <Icon size={'$l'} icon={'Home'} color={'$tertiaryText'} />
        <Icon size={'$l'} icon={'ChannelTalk'} color={'$tertiaryText'} />
        <Icon size={'$l'} icon={'Notifications'} color={'$primaryText'} />
        <Icon size={'$l'} icon={'Discover'} color={'$tertiaryText'} />
        <Icon size={'$l'} icon={'Profile'} color={'$tertiaryText'} />
      </XStack>
    </Stack>
...
