...
        useHorizontalTitleLayout={!isWindowNarrow}
        rightControls={
          <ScreenHeader.TextButton
            color={'$positiveActionText'}
            onPress={handleAddRole}
          >
            New
          </ScreenHeader.TextButton>
        }
      />
      <ScrollView
        flex={1}
        contentContainerStyle={{
...
