...
    );
  }

  return (
    <NavigationProvider>
      <View flex={1} backgroundColor="$background">
        <ScreenHeader title="Invite People" backAction={handleGoBack} />

        <YStack flex={1} paddingHorizontal={getTokenValue('$l')}>
          <PaddedBlock>
            <InviteFriendsToTlonButton group={group} />
          </PaddedBlock>

          <YStack flex={1}>
            <ContactBook
              multiSelect
              searchable
              searchPlaceholder="Filter by nickname, @p"
              onSelectedChange={setInvitees}
              disabledIds={disabledIds}
              disabledReason="App version mismatch"
            />
          </YStack>

...
