...
              }
              rightActions={[
                {
                  id: 'edit-profile',
                  icon: 'EditList',
                  label: 'Edit profile',
                  testID: 'ContactEditButton',
                  onPress: handlePressEdit,
                  visible: Boolean(canEdit),
                },
              ]}
              placement="navigation"
            />
...
